--- a/front-end/src/app/globals.css
+++ b/front-end/src/app/globals.css
@@ -14,3 +14,41 @@
 ::-webkit-scrollbar-track {
   background-color: transparent;
 }
+
+@keyframes fade-in-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fade-in-up {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-in-down {
+  animation: fade-in-down 0.5s ease-out;
+}
+
+.animate-fade-in-up {
+  animation: fade-in-up 0.5s ease-out
+}
+
+::placeholder {
+  color: transparent;
+}
+
+:focus::placeholder {
+  color: #10a37f;
+}
